<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:title="@string/settings_title"
    tools:context="com.example.andoid.filmhub.SettingsActivity">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default_movies"
        android:entries="@array/settings_order_by_labels_movies"
        android:entryValues="@array/settings_order_by_values_movies"
        android:key="@string/settings_order_by_key_movies"
        android:title="@string/settings_order_by_label" />

    <ListPreference
        android:defaultValue="@string/settings_category_by_default_movies"
        android:entries="@array/settings_category_by_labels_movies"
        android:entryValues="@array/settings_category_by_values_movies"
        android:key="@string/settings_category_by_key_movies"
        android:title="@string/settings_category_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_min_number_default_movies"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_number_key_movies"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_number_label" />

</PreferenceScreen>