<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:title="@string/settings_title"
    tools:context="com.example.andoid.filmhub.SettingsActivity">


    <ListPreference
        android:defaultValue="@string/settings_order_by_default_shows"
        android:entries="@array/settings_order_by_labels_shows"
        android:entryValues="@array/settings_order_by_values_shows"
        android:key="@string/settings_order_by_key_shows"
        android:title="@string/settings_order_by_label_shows" />

    <ListPreference
        android:defaultValue="@string/settings_category_by_default_shows"
        android:entries="@array/settings_category_by_labels_shows"
        android:entryValues="@array/settings_category_by_values_shows"
        android:key="@string/settings_category_by_key_shows"
        android:title="@string/settings_category_by_label_shows" />

    <EditTextPreference
        android:defaultValue="@string/settings_min_number_default_shows"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_number_key_shows"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_number_label_shows" />
</PreferenceScreen>