<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/first_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/favoriteTitleImageView"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:scaleType="fitXY"
                android:src="@drawable/db_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/favoriteTitleImageView_recyclerLayoutdb_description" />

            <TextView
                android:id="@+id/favoriteTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#99FFBF00"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/favoriteTitleTextView"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/favoriteTitleImageView"
                app:layout_constraintStart_toStartOf="@+id/favoriteTitleImageView"
                app:layout_constraintTop_toTopOf="@+id/favoriteTitleImageView" />

            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:id="@+id/expand_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#99FFBF00"
                app:animDuration="200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favoriteTitleImageView"
                app:maxCollapsedLines="0">

                <TextView
                    android:id="@+id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/placeholder_text"
                    android:layout_marginEnd="5dp" />

                <ImageButton
                    android:id="@+id/expand_collapse"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="end|bottom"
                    android:background="@android:color/transparent"
                    android:paddingStart="4dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    android:contentDescription="@string/expandableContentCollapseButton_recyclerLayoutdb_description" />
            </com.ms.square.android.expandabletextview.ExpandableTextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
