<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogContainerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_backround"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/warningHeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title_warning_backround"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/warningHeaderImageIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/warningHeaderImageIcon_splashError_description"
            app:layout_constraintBottom_toBottomOf="@id/warningHeaderTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/warningHeaderTextView" />

        <TextView
            android:id="@+id/warningContentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/dialog_warning_message"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/warningHeaderTextView"
            tools:layout_editor_absoluteX="21dp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieLoadingAnimation"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/warningContentTextView"
            app:lottie_autoPlay="true"
            app:lottie_fileName="connection.json"
            app:lottie_loop="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/warningButtonAction"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_warning_backround"
        android:text="@string/dialog_warning_button"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/dialogLayout"
        app:layout_constraintTop_toBottomOf="@id/dialogLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>